@@ -4146,11 +4146,11 @@
 1791,Galion@NPC_COMBOATTACK,chase,171,2,1000,0,5000,yes,target,always,0,,,,,,
 1791,Galion@AS_SONICBLOW,attack,136,5,1000,0,5000,yes,target,always,0,,,,,,
 1791,Galion@AS_SONICBLOW,chase,136,5,1000,0,5000,yes,target,always,0,,,,,,
-1783,Galion@NPC_WINDATTACK,attack,187,3,2000,0,5000,yes,target,always,0,,,,,,
-1783,Galion@NPC_WINDATTACK,chase,187,3,2000,0,5000,yes,target,always,0,,,,,,
-1783,Galion@NPC_DARKNESSATTACK,attack,190,3,2000,0,5000,yes,target,always,0,,,,,,
-1783,Galion@NPC_DARKNESSATTACK,chase,190,3,2000,0,5000,yes,target,always,0,,,,,,
-1783,Galion@NPC_CHANGEDARKNESS,attack,168,1,1000,0,5000,no,self,always,0,,,,,,
+1791,Galion@NPC_WINDATTACK,attack,187,3,2000,0,5000,yes,target,always,0,,,,,,
+1791,Galion@NPC_WINDATTACK,chase,187,3,2000,0,5000,yes,target,always,0,,,,,,
+1791,Galion@NPC_DARKNESSATTACK,attack,190,3,2000,0,5000,yes,target,always,0,,,,,,
+1791,Galion@NPC_DARKNESSATTACK,chase,190,3,2000,0,5000,yes,target,always,0,,,,,,
+1791,Galion@NPC_CHANGEDARKNESS,attack,168,1,1000,0,5000,no,self,always,0,,,,,,
 1793,Megalith@NPC_EMOTION,idle,197,1,2000,0,5000,yes,self,always,0,9,,,,,
 1794,Roween@NPC_EMOTION,idle,197,1,2000,0,5000,yes,self,always,0,22,,,,,
 1794,Roween@NPC_COMBOATTACK,attack,171,4,1000,0,5000,yes,target,always,0,,,,,,
